# IS459_Crypto_BigData_Pipeline

./: .gitignore  Dockerfile  README.md  airflow-start.sh  cloud-init.sh  docker-compose.yaml  docker-compose.yml  emr-script.md  is459-clickhouse-key.pem  is459-emr.pem  is459-sea.pem  pyproject.toml  quickstart.md  requirements.txt  runpipeline.py  test.py  test_socket.py  tests.md
airflow/: airflow-start.service  airflow-start.sh  airflow.Dockerfile  requirements.txt
airflow/dags/: .airflowignore  _common.py  backfill_batch_reprocessing.py  batch_dag.py  daily_aggregate_refresh.py  stream_pipeline.py  weekly_data_quality_check.py
data/state/: batch_ingest_state.json
docs/: portfolio.md  portfolio_calculations_reference.md  portfolio_settings_reference.md
infra/terraform/: ec2.tf  glue.tf  (+13 more)
roadmap/: PLAN.md  bigDataRoadmap.md  checklist.md  clickhouse_env_vars.md  coinlist.md  crypto_big_data_project_roadmap_v1.md  crypto_big_data_project_roadmap_v2.md  crypto_big_data_project_roadmap_v3.md  crypto_big_data_project_roadmap_v4.md  crypto_big_data_project_roadmap_v5.md  error_clickhouse.txt  integration_main.md  integration_plan.md
schemas/: kline_1m.example.json  kline_1m.schema.json
scripts/: provision_shared_clickhouse.py  publish_emr_batch_artifacts.py  run_stream_to_silver.py  submit_emr_serverless_job.py  test_batch_ingest_workflow.py  test_kaggle_csv_to_bronze_workflow.py  test_phase5_clickhouse_workflow.py  test_phase6_batch_workflow.py  test_stream_producer_workflow.py  test_stream_to_silver_workflow.py
src/: __init__.py
temp_scripts/: kaggle.py
(+57 files in other folders)
